[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://main/GameSessionHarness.gd" id=1]
[ext_resource type="PackedScene" path="res://levels/Level01.tscn" id=2]
[ext_resource type="PackedScene" path="res://ui/HUD.tscn" id=3]
[ext_resource type="PackedScene" path="res://ui/BuildPopup.tscn" id=4]
[ext_resource type="Script" path="res://ui/WinLoseOverlay.gd" id=5]

[node name="GameSessionHarness" type="Node"]
script = ExtResource( 1 )
level_scene = ExtResource( 2 )
hud_scene = ExtResource( 3 )
build_popup_scene = ExtResource( 4 )
win_lose_overlay_scene = ExtResource( 5 )

[node name="LevelRoot" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="WinLoseOverlay" type="Control" parent="UI"]
script = ExtResource( 5 )
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0
offset_top = 0
offset_right = 0
offset_bottom = 0

[node name="MessageLabel" type="Label" parent="UI/WinLoseOverlay"]
text = ""
horizontal_alignment = 1
vertical_alignment = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200
offset_top = -60
offset_right = 200
offset_bottom = 20
theme_override_font_sizes/font_size = 48

[node name="RestartButton" type="Button" parent="UI/WinLoseOverlay"]
text = "Restart (R)"
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70
offset_top = 30
offset_right = 70
offset_bottom = 66
